k8s/apps/hello-world/base/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-world
spec:
  hosts:
    - "hello.hugecat.net"
  gateways:
    - hello-world-gateway
  http:
    - route:
        - destination:
            host: hello-world
            port:
              number: 80
